# solmud

./: .gitignore  CLEANUP_COMPLETE.txt  CLEANUP_STATUS.md  CrcPrintAgent.java  EVIDENCE_FIRST_IMPLEMENTATION_COMPLETE.md  MANIFEST.MF  MAPPING_VERIFICATION_ROADMAP.md  MILLION_DOLLAR_STYLE.md  MUSIC_MYSTERY.md  Makefile  OG_vs_DEOB.md  README.md  The_Cartographer_of_Lost_Things.md  UPGRADE_TEMPLATE.md  agentbuilder.sh  go.mod  run-agent.sh  runog.sh  startloop_src.html.txt
.agent_context/: requirements.md
.opencode/: README.md  opencode.json
.opencode/agent/: evidence-reviewer.md  forensic-analyst.md  mapping-coordinator.md
.opencode/command/: audit-csv.md  generate-evidence.md  quality-report.md  resolve-dispute.md  verify-all.md
bytecode/: README.md
bytecode/client/: AFCKELYG.bytecode.txt  ARZPHHDH.bytecode.txt  BISVHPUN.bytecode.txt  BMEXSMOV.bytecode.txt  CDEJWOSB.bytecode.txt  CKDEJADD.bytecode.txt  CLRWXPOI.bytecode.txt  CRRWDRTI.bytecode.txt  CWNCPMLX.bytecode.txt  CXGZMTJK.bytecode.txt  DJRMEMXO.bytecode.txt  DLZHLHNK.bytecode.txt  DSMJIEPN.bytecode.txt  DUCMKFAY.bytecode.txt  DYMVKFXP.bytecode.txt  FEHPTPDG.bytecode.txt  FPVKJCAH.bytecode.txt  FTPNODIB.bytecode.txt  GCPOSBWX.bytecode.txt  GHOWLKWN.bytecode.txt  GQOSZKJC.bytecode.txt  HNKCWGJM.bytecode.txt  HZTFWEML.bytecode.txt  IGSLDTHC.bytecode.txt  IVIFZQBK.bytecode.txt  JHDAGNBV.bytecode.txt  JOCFVBOI.bytecode.txt  KHACHIFW.bytecode.txt  KVCQPLIW.bytecode.txt  LHGXPZPG.bytecode.txt  LKGEGIEW.bytecode.txt  LLORVYLP.bytecode.txt  MBMGIXGO.bytecode.txt  MNHKFPQO.bytecode.txt  MUDLUUBC.bytecode.txt  NQABEVLK.bytecode.txt  NYFUGYQS.bytecode.txt  OFQAEXFV.bytecode.txt  OIBEELAZ.bytecode.txt  OJEALINP.bytecode.txt  (+33 more)
bytecode/mapping/: ENHANCEMENT_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  QUALITY_REPORT.md  README.md  class_mapping.csv  class_mapping.csv.backup  class_mapping.json
bytecode/sign/: signlink.bytecode.txt
cmd/render3d/: main.go
pkg/assert/: assert.go
pkg/debug/: debug.go
pkg/framebuffer/: ebitengine.go
pkg/geometry/: interfaces.go
pkg/math/: math.go  matrix.go  project.go  trig.go  vec2.go  vec3.go  vector_ops.go
pkg/renderer/: interfaces.go  scanline.go
solmud_server/: .gitignore  CHECKPOINT.md  client_handler.go  const.go  go.mod  main.go
solmud_server/cache/: main_file_cache.idx1  main_file_cache.idx2  main_file_cache.idx3  main_file_cache.idx4
srcAllDummysRemoved/: compile.sh  fmt.sh
srcAllDummysRemoved/.javap_cache/: Animable_Sub3.javap.cache  (+37 more)
srcAllDummysRemoved_dxg_edit/: fmt.sh  run.sh
supercharger/: coords.go  tile.go
tools/: Makefile  batch_optimizer.py  parallel_verifier.py  quality_gate.py  verify_cleanliness.sh
yt-subs/: README.md  pyproject.toml
yt-subs/src/yt_subs/: __init__.py  cli.py  extractor.py
yt-subs/src/yt_subs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+359 files in other folders)
