[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-subs"
version = "0.1.0"
description = "Extract YouTube video subtitles as JSON with timestamps"
authors = [
    {name = "yt-subs", email = "yt-subs@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
keywords = ["youtube", "subtitles", "transcript", "json", "timestamps"]
dependencies = [
    "youtube-transcript-api>=0.5.0",
    "typer>=0.9.0",
]

[project.scripts]
yt-subs = "yt_subs.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["yt_subs*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "Q",   # flake8-quotes
    "N",   # pep8-naming
]
ignore = [
    "B008",  # Do not perform function calls in argument defaults
    "B009",  # Do not call function in exception context
    "B003",  # do not use `.strip()` with `split()`
    "B007",  # Loop control variable not used within the loop body
    "B701",  # Do not use bare `except:`
    "B904",  # Use `continue` instead of `pass`
    "C901",  # too complex
    "N802",  # Function name should be lowercase
    "N803",  # Argument name should be lowercase
    "N806",  # Variable in function should be lowercase
    "TCH",   # Black compatibility
    "TRY003", # nested try blocks
]

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "youtube_transcript_api",
    "typer",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "*"
]
warn_return_any = false